# AI--wallpaper

./: README.md  package-lock.json  package.json  product_requirements_document.md  technical_architecture_document.md
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  lib.rs  main.rs  storage.rs
src/router/: index.ts
src/views/: Gallery.vue  Home.vue  Prompt.vue  Settings.vue
