[package]
name = "ai-wallpaper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3.2.0"
reqwest = { version = "0.13.1", features = ["json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"
tauri-plugin-fs = "2.4.5"
percent-encoding = "2.3.2"

